Update website with arxiv link and new lazy loading code.

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
       <div class="cover-container">
         <div class="icons">
           <div class="paper-icon">
-            <a href="http://arxiv.org/">
+            <a href="https://arxiv.org/abs/1706.03825">
               <img src="images/paper_icon.png" style="width: 100px"/><br>Paper
             </a>
           </div>
