Update page metadata with a preview image and title/description

--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <html>
 <head>
   <title>SmoothGrad</title>
+  <meta property="og:type" content="article"/>
+  <meta property="og:title" content="SmoothGrad"/>
+  <meta property="og:description" content="Removing noise by adding noise">
+  <meta property="og:url" content="http://tensorflow.github.io/saliency/"/>
+  <meta property="og:image" content="http://tensorflow.github.io/saliency/images/preview.png"/>
+
+  <meta name="twitter:card" value="summary_large_image">
+  <meta name="twitter:title" content="SmoothGrad">
+  <meta name="twitter:description" content="Removing noise by adding noise">
+  <meta name="twitter:url" content="http://tensorflow.github.io/saliency/">
+  <meta name="twitter:image" content="http://tensorflow.github.io/saliency/images/preview.png">
+  <meta name="twitter:image:width" content="800">
+  <meta name="twitter:image:height" content="263">
+
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
