Change links from tensorflow => pair-code

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta property="og:type" content="article"/>
   <meta property="og:title" content="SmoothGrad"/>
   <meta property="og:description" content="Removing noise by adding noise">
-  <meta property="og:url" content="http://tensorflow.github.io/saliency/"/>
-  <meta property="og:image" content="http://tensorflow.github.io/saliency/images/preview.png"/>
+  <meta property="og:url" content="http://pair-code.github.io/saliency/"/>
+  <meta property="og:image" content="http://pair-code.github.io/saliency/images/preview.png"/>
 
   <meta name="twitter:card" value="summary_large_image">
   <meta name="twitter:title" content="SmoothGrad">
   <meta name="twitter:description" content="Removing noise by adding noise">
-  <meta name="twitter:url" content="http://tensorflow.github.io/saliency/">
-  <meta name="twitter:image" content="http://tensorflow.github.io/saliency/images/preview.png">
+  <meta name="twitter:url" content="http://pair-code.github.io/saliency/">
+  <meta name="twitter:image" content="http://pair-code.github.io/saliency/images/preview.png">
   <meta name="twitter:image:width" content="800">
   <meta name="twitter:image:height" content="263">
 
@@ -366,7 +366,7 @@
             </a>
           </div>
           <div class="paper-icon" style="margin-left: 20px">
-            <a href="http://github.com/tensorflow/saliency">
+            <a href="http://github.com/pair-code/saliency">
               <img src="images/code_icon.png" style="width: 100px"/><br>Code
             </a>
           </div>
