Change number of images compared in GIG/XRAI

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>SmoothGrad</title>
+  <title>PAIR-code saliency</title>
   <meta property="og:type" content="article"/>
   <meta property="og:title" content="SmoothGrad"/>
   <meta property="og:description" content="Removing noise by adding noise">
@@ -261,7 +261,7 @@
       margin-top: 106px;
     }
 
-    .smoothgrad-label {
+    .second-row-label {
       color: #ff4e4e;
     }
 
