Update GIG page (poster, animation)

--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
       padding: 8px;
     }
 
+    .animation-label + .animation-label {
+      padding-top: 210px;
+    }
+
     .fewer-columns .rotated {
       margin-top: -125px;
     }
