--- a/index.html
+++ b/index.html
@@ -249,6 +249,11 @@
       text-decoration: underline;
     }
 
+    .description img.poster {
+      height: 450px;
+      width: auto;
+    }
+
     .description p {
       width: 75%;
       font-size: 16px;
