Replace preview, title, description

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
 <head>
-  <title>PAIR-code saliency</title>
+  <title>PAIR Saliency</title>
   <meta property="og:type" content="article"/>
-  <meta property="og:title" content="SmoothGrad"/>
-  <meta property="og:description" content="Removing noise by adding noise">
+  <meta property="og:title" content="PAIR Saliency"/>
+  <meta property="og:description" content="Understanding model predictions through saliency methods">
   <meta property="og:url" content="http://pair-code.github.io/saliency/"/>
   <meta property="og:image" content="http://pair-code.github.io/saliency/images/preview.png"/>
 
   <meta name="twitter:card" value="summary_large_image">
-  <meta name="twitter:title" content="SmoothGrad">
-  <meta name="twitter:description" content="Removing noise by adding noise">
+  <meta name="twitter:title" content="PAIR Saliency">
+  <meta name="twitter:description" content="Understanding model predictions through saliency methods ">
   <meta name="twitter:url" content="http://pair-code.github.io/saliency/">
   <meta name="twitter:image" content="http://pair-code.github.io/saliency/images/preview.png">
   <meta name="twitter:image:width" content="800">
