--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-  <title>PAIR Saliency</title>
+  <title>Saliency (PAIR-code)</title>
   <meta property="og:type" content="article"/>
-  <meta property="og:title" content="PAIR Saliency"/>
+  <meta property="og:title" content="Saliency (PAIR-code)"/>
   <meta property="og:description" content="Understanding model predictions through saliency methods">
   <meta property="og:url" content="http://pair-code.github.io/saliency/"/>
   <meta property="og:image" content="http://pair-code.github.io/saliency/images/preview.png"/>
 
   <meta name="twitter:card" value="summary_large_image">
-  <meta name="twitter:title" content="PAIR Saliency">
+  <meta name="twitter:title" content="Saliency (PAIR-code)">
   <meta name="twitter:description" content="Understanding model predictions through saliency methods ">
   <meta name="twitter:url" content="http://pair-code.github.io/saliency/">
   <meta name="twitter:image" content="http://pair-code.github.io/saliency/images/preview.png">
